# defintel-nmsg

./: .gitignore  Makefile.am  README  check_libnmsg.m4  configure.ac  nmsg_msg_defintel.c  sink.c  sink.proto
example/: Makefile.am  sink_example.c  sink_example.h
